# job-offer-insight

./: .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  end-goal.md  package-lock.json
.myteam/: load.py
.myteam/dev-assistance/: load.py  skill.md
.myteam/feature-pipeline/: skill.md
.myteam/git-commit/: skill.md
.myteam/greenfield-project-build/: skill.md
.myteam/myteam-assistance/: load.py  skill.md
.myteam/style_guide/: skill.md
.myteam/testing/: skill.md
backend/: DOCS.md  alembic.ini  pyproject.toml  requirements.txt  results.json
backend/alembic/: DOCS.md  env.py
backend/alembic/versions/: 0001_create_offer_table.py
backend/app/: main.py  models.py  services.py
backend/configs/: DOCS.md  config.yaml  config_loader.py  config_types.py
backend/scripts/: seed_demo.py
backend/src/: DOCS.md  database.py  main.py
backend/src/job_offer_insight_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: DOCS.md  conftest.py  test_config_loader.py  test_offers_api.py
frontend/: DOCS.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  DOCS.md  api.ts  main.tsx  styles.css  types.ts
src/: config.yaml
src/backend/: dependencies.py  main.py
src/docs/: application_interface.md
src/frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
tests/backend/: test_agent_runtime.py  test_audio_transcriber_config.py  test_comparisons_stage7.py  test_comparisons_stage8_generation.py  test_health_endpoints.py  test_logging_bootstrap.py  (+9 more)
(+118 files in other folders)
